fixed mapbox markers, price for card jumping for some reason

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,2 +1,9 @@
 // Import page-specific CSS files here.
 @import "home";
+
+.title-elements {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 16px;
+}
